--- a/MediaBackupManager/Styles/HeaderButtons.xaml
+++ b/MediaBackupManager/Styles/HeaderButtons.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:MediaBackupManager.Styles">
+
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
             <Setter.Value>
@@ -12,17 +13,20 @@
         </Setter>
     </Style>
 
-    <SolidColorBrush x:Key="ButtonBlue.Static.Foreground" Color="White"/>
-    <SolidColorBrush x:Key="ButtonBlue.Static.Background" Color="#FF2CA8FF"/>
+    <SolidColorBrush x:Key="ButtonBlue.Static.Foreground" Color="Black"/>
+    <SolidColorBrush x:Key="ButtonBlue.Static.Background" Color="Transparent"/>
     <SolidColorBrush x:Key="ButtonBlue.Static.Border" Color="Transparent"/>
-    <SolidColorBrush x:Key="ButtonBlue.MouseOver.Background" Color="#FF198ADA"/>
-    <SolidColorBrush x:Key="ButtonBlue.Pressed.Background" Color="#FF198ADA"/>
+    <SolidColorBrush x:Key="ButtonBlue.MouseOver.Foreground" Color="Red"/>
+    <SolidColorBrush x:Key="ButtonBlue.MouseOver.Background" Color="Transparent"/>
+    <SolidColorBrush x:Key="ButtonBlue.MouseOver.Border" Color="Red"/>
+    <SolidColorBrush x:Key="ButtonBlue.Pressed.Background" Color="Transparent"/>
     <SolidColorBrush x:Key="ButtonBlue.Disabled.Background" Color="Transparent"/>
     <SolidColorBrush x:Key="ButtonBlue.Disabled.Foreground" Color="Black"/>
     <SolidColorBrush x:Key="ButtonBlue.Disabled.Border" Color="Black"/>
 
-    <Style x:Key="ColorButtonBlue" TargetType="{x:Type Button}">
-        <Setter Property="Margin" Value="1" />
+    <Style x:Key="HeaderButton" TargetType="{x:Type Button}">
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Margin" Value="3,5" />
         <Setter Property="Padding" Value="10,0" />
         <Setter Property="Height" Value="30" />
         <Setter Property="MinWidth" Value="60" />
@@ -38,7 +42,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
-                            Background="{TemplateBinding Background}" SnapsToDevicePixels="true" CornerRadius="2">
+                            Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
                         <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
                                           Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" 
                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
@@ -50,6 +54,9 @@
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter Property="Background" TargetName="border" Value="{StaticResource ButtonBlue.MouseOver.Background}"/>
+                            <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource ButtonBlue.MouseOver.Foreground}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource ButtonBlue.MouseOver.Border}"/>
+                            <Setter Property="BorderThickness" Value="0,0,0,2" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
                             <Setter Property="Background" TargetName="border" Value="{StaticResource ButtonBlue.Pressed.Background}"/>
